# dwm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  dist-workspace.toml  justfile  plan.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
site/: build.sh  index.html  wrangler.jsonc
site/public/: site.webmanifest
src/: agent.rs  cli.rs  git.rs  jj.rs  main.rs  names.rs  shell.rs  tui.rs  vcs.rs  workspace.rs
