[package]
name = "dwm"
version = "0.4.3"
edition = "2024"
repository = "https://github.com/drivasperez/dwm"
description = "A git/jj worktree manager"
homepage = "dwm.drpz.xyz"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
dirs = "6"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
